--- a/public/auth.html
+++ b/public/auth.html
@@ -15,7 +15,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand"><img src="images/icon.png" alt="OAuth.io"> OAuth.io Tutorial</a>
+                    <a href="#" class="navbar-brand"><img src="images/icon.png" alt="OAuth.io"> Coords</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
