Began work on implementing a messeaging system using sockets.io . Modified index page to use new logo.

--- a/public/index.xhtml
+++ b/public/index.xhtml
@@ -6,7 +6,7 @@
 
         <link rel="meta" type="application/rdf+xml" href="rdf.xml"/>
 
-        <link rel="icon" type="image/png" href="images/logo.png"/>
+        <link rel="icon" type="image/png" href="images/icon-16.png"/>
 
         <title>Coords</title>
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
@@ -153,6 +153,22 @@
                     
             </div>
         </div>
+
+
+        <!-- Main Menu Panel, disconnected from pages for re-use -->
+        <div id="menuPanel" class="unscrollablePanelContainer rightPanel inactivePanel">
+
+            <div class="scrollableContent customWebkitScrollbar fullHeight noselect">
+                <div class="container-fluid">
+                    <div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4">
+                        <img class="img-responsive" src="/images/logo.png" alt="Coords Logo"/>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
 
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/jquery-cookie/jquery.cookie.js"></script>
