--- a/public/index.xhtml
+++ b/public/index.xhtml
@@ -479,6 +479,7 @@ public /home/coords/coords/public
 
         <div id="menuPanelContentOverlay" class="panelContentOverlay hidden"></div>
 
+        <script src="components/svg4everybody/svg4everybody.js"></script>
         <script src="components/jquery/dist/jquery.js"></script>
         <script src="components/moment/moment.js"></script>
         <script src="components/livestampjs/livestamp.min.js"></script>
