--- a/public/index.xhtml
+++ b/public/index.xhtml
@@ -33,9 +33,7 @@
                 <div class="container">
 
                     <div class="row margin-top-10 text-center">
-                        <svg class="coordsLogo" alt="Coords Logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <use xlink:href="/images/coords_logo.svg#svg4797"></use>
-                        </svg>
+                        <img src="/images/logo.png" alt="Coords Logo" class="coordsLogo" />
                     </div>
 
                     <div class="row margin-top-20 text-center">
