fixed svg in firefox

--- a/public/index.xhtml
+++ b/public/index.xhtml
@@ -296,13 +296,13 @@ public /home/coords/coords/public
                     </div>
 
                     <button id="discoveryMapGpsButton" class="fab fab-white mapGeolocateButton gps_not_fixed">
-                        <svg class="gps_fixed square25px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <svg class="gps_fixed square25px black-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <use xlink:href="/images/material.svg#gps_fixed"></use>
                         </svg>
-                        <svg class="gps_not_fixed square25px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <svg class="gps_not_fixed square25px black-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <use xlink:href="/images/material.svg#gps_not_fixed"></use>
                         </svg>
-                        <svg class="gps_off square25px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <svg class="gps_off square25px black-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <use xlink:href="/images/material.svg#gps_off"></use>
                         </svg>
                     </button>
@@ -354,13 +354,13 @@ public /home/coords/coords/public
                 <div id="roomMap"></div>
 
                 <button id="roomMapGpsButton" class="fab fab-white mapGeolocateButton gps_not_fixed">
-                    <svg class="gps_fixed square25px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg class="gps_fixed square25px black-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <use xlink:href="/images/material.svg#gps_fixed"></use>
                     </svg>
-                    <svg class="gps_not_fixed square25px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg class="gps_not_fixed square25px black-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <use xlink:href="/images/material.svg#gps_not_fixed"></use>
                     </svg>
-                    <svg class="gps_off square25px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg class="gps_off square25px black-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <use xlink:href="/images/material.svg#gps_off"></use>
                     </svg>
                 </button>
